--- a/.github/workflows/SGSI_Build.yml
+++ b/.github/workflows/SGSI_Build.yml
@@ -6,11 +6,11 @@ on:
       ROM_URL:
         description: 'ROM_URL'
         required: true
-        default: 'https://hugeota.d.miui.com/21.5.31/miui_TUCANA_21.5.31_cb42ec9bed_11.0.zip'
+        default: 'https://get.pixelexperience.org/eUt0cjc1bXFBK1V0YWZaU3NWNnBPYzN4SjBqYlhpc3ZGNGM5Qk5GYXlyeTdLYi9wZFc1b3hwR28yL0Q2Q0U2SlNkanFxcytlcWlpUzZjRENJMzlOVjhhMjlsdS91Z3JDNDV0bXdYbVBvcW96UmJqWlpvYXpKNFljRTdydjI2S0M=/PixelExperience_Plus_sirius-12.1-20220719-1609-OFFICIAL.zip'
       ZIP_NAME:
         description: 'ZIP_NAME'
         required: true
-        default: 'miui_TUCANA_21.5.31_cb42ec9bed_11.0.zip'
+        default: 'PixelExperience_Plus_sirius-12.1-20220719-1609-OFFICIAL.zip'
       OS_TYPE:
         description: 'OS_TYPE'
         required: true
@@ -18,7 +18,7 @@ on:
       SGSI_TYPE:
         description: 'SGSI_TYPE(AB, A, or BOTH)'
         required: true
-        default: 'AB'
+        default: 'BOTH'
       REPACK_NAME:
         description: 'REPACK_NAME'
         required: true
