--- a/.github/workflows/SGSI_Build.yml
+++ b/.github/workflows/SGSI_Build.yml
@@ -6,11 +6,11 @@ on:
       ROM_URL:
         description: 'ROM_URL'
         required: true
-        default: 'https://hugeota.d.miui.com/21.5.31/miui_TUCANA_21.5.31_cb42ec9bed_11.0.zip'
+        default: 'https://get.pixelexperience.org/VmUxQ3RFdmdURFpYQ0kybGxhelBybkRoQ1oxTTgzemNOSVNkUHFBNEZRS3hpNkNpZWFSUjVpWXlUSDZVVjkzTUtTWEtIWllMcUlSU0R5bDlML0dYbmRRbVM1bWthSHl6ODZmVldIaWs5cUVlbEFlN0dIS1hlNTdPdmRvaEh0TU0=/PixelExperience_Plus_sirius-11.0-20211216-2024-OFFICIAL.zip'
       ZIP_NAME:
         description: 'ZIP_NAME'
         required: true
-        default: 'miui_TUCANA_21.5.31_cb42ec9bed_11.0.zip'
+        default: 'PixelExperience_Plus_sirius-11.0-20211216-2024-OFFICIAL.zip'
       OS_TYPE:
         description: 'OS_TYPE'
         required: true
@@ -18,7 +18,7 @@ on:
       SGSI_TYPE:
         description: 'SGSI_TYPE(AB, A, or BOTH)'
         required: true
-        default: 'AB'
+        default: 'BOTH'
       REPACK_NAME:
         description: 'REPACK_NAME'
         required: true
